[gd_scene load_steps=8 format=3 uid="uid://dvk8m15ju4hcs"]

[ext_resource type="Script" path="res://Scripts/Lobster.gd" id="1_k111d"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3o42r"]
albedo_color = Color(0.560784, 0.227451, 0.0666667, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0mmwu"]
lightmap_size_hint = Vector2i(17, 14)
material = SubResource("StandardMaterial3D_3o42r")

[sub_resource type="SphereShape3D" id="SphereShape3D_3sfqe"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ooi23"]
albedo_color = Color(0.709804, 0, 0.0980392, 1)

[sub_resource type="SphereMesh" id="SphereMesh_arx5a"]
material = SubResource("StandardMaterial3D_ooi23")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bmnmr"]

[node name="Lobster With Hole" type="Node3D"]
transform = Transform3D(1.68487, 0, 0, 0, 1.68487, 0, 0, 0, 1.68487, -19.7051, 1.65486, 0)

[node name="Lobster" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_0mmwu")
skeleton = NodePath("../..")
script = ExtResource("1_k111d")

[node name="Detection Radius" type="Area3D" parent="Lobster"]
transform = Transform3D(1.3516, 0, 0, 0, 1.3516, 0, 0, 0, 1.3516, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Lobster/Detection Radius"]
transform = Transform3D(29.1807, 0, 0, 0, 29.1807, 0, 0, 0, 29.1807, 0, 0, 0)
shape = SubResource("SphereShape3D_3sfqe")

[node name="RockThrowTimer" type="Timer" parent="Lobster"]
wait_time = 1.5
one_shot = true

[node name="Eyes For Now Lol" type="MeshInstance3D" parent="Lobster"]
transform = Transform3D(-0.0326749, 0, 1.01618, 0, 0.999379, 0, -0.462058, 0, -0.0718602, -0.0205917, 0.237864, -0.236672)
mesh = SubResource("SphereMesh_arx5a")

[node name="LobsterHurtbox" type="Area3D" parent="Lobster"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Lobster/LobsterHurtbox"]
transform = Transform3D(1.10746, 0, 0, 0, 1.10746, 0, 0, 0, 1.10746, 0, 0, 0)
shape = SubResource("CapsuleShape3D_bmnmr")

[connection signal="area_entered" from="Lobster/Detection Radius" to="Lobster" method="_on_detection_radius_area_entered"]
[connection signal="area_exited" from="Lobster/Detection Radius" to="Lobster" method="_on_detection_radius_area_exited"]
[connection signal="timeout" from="Lobster/RockThrowTimer" to="Lobster" method="_on_rock_throw_timer_timeout"]
[connection signal="area_entered" from="Lobster/LobsterHurtbox" to="Lobster" method="_on_lobster_hurtbox_area_entered"]
